--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voice Chat with AI</title>
+  <title>Interview</title>
   <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 <div class="container">
   <header>
-    <h1>Voice Chat with AI</h1>
+    <h1>Interview</h1>
   </header>
 
   <main>
@@ -54,6 +54,8 @@
   </footer>
 </div>
 
+<!-- Add the query parameter script before other scripts -->
+<script src="/static/js/query-params.js"></script>
 <script src="/static/js/webrtc.js"></script>
 <script src="/static/js/app.js"></script>
 </body>
