--- a/static/index.html
+++ b/static/index.html
@@ -3,49 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interview</title>
+  <title>Welcome to Interview</title>
   <link rel="stylesheet" href="/static/css/style.css">
+  <style>
+    .welcome-container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      background-color: white;
+      border-radius: var(--border-radius);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .welcome-form {
+      margin-top: 30px;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+    }
+
+    .input-group label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: var(--primary-color);
+    }
+
+    .input-group input {
+      width: 100%;
+      padding: 12px 15px;
+      border: 2px solid #e2e8f0;
+      border-radius: var(--border-radius);
+      font-size: 16px;
+      transition: border-color var(--transition-speed);
+    }
+
+    .input-group input:focus {
+      border-color: var(--primary-color);
+      outline: none;
+    }
+
+    .submit-button {
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      border-radius: var(--border-radius);
+      padding: 12px 25px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color var(--transition-speed), transform var(--transition-speed);
+    }
+
+    .submit-button:hover {
+      background-color: #3d5a9b;
+      transform: translateY(-2px);
+    }
+
+    .welcome-message {
+      margin-bottom: 30px;
+      color: #4a5568;
+      line-height: 1.6;
+    }
+
+    .error-message {
+      color: #e53e3e;
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: var(--border-radius);
+      background-color: rgba(229, 62, 62, 0.1);
+      display: none;
+    }
+
+    .error-message.visible {
+      display: block;
+      animation: fadeIn 0.3s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
 <div class="container">
   <header>
-    <h1>Interview</h1>
+    <h1>Welcome to the Interview</h1>
   </header>
 
   <main>
-    <div class="status-container">
-      <div id="status" class="status">Ready to start</div>
-      <div id="listening-indicator" class="listening-indicator">
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
+    <div class="welcome-container">
+      <div class="welcome-message">
+        <p>Please enter your email address to begin the interview experience.</p>
       </div>
-    </div>
 
-    <div class="conversation-container">
-      <div id="conversation" class="conversation">
-        <div class="message system">
-          <div class="message-content">
-            Hello! I'm ready to chat. Click the microphone button and start speaking.
-          </div>
+      <form id="welcome-form" class="welcome-form">
+        <div class="input-group">
+          <label for="user-email">Your Email Address</label>
+          <input
+                  type="email"
+                  id="user-email"
+                  name="user-email"
+                  placeholder="Enter your email address"
+                  required
+                  autocomplete="email"
+          >
         </div>
-      </div>
-    </div>
 
-    <div class="controls">
-      <button id="start-button" class="control-button">
-        <span class="icon">🎤</span>
-        <span class="label">Start</span>
-      </button>
-      <button id="stop-button" class="control-button" disabled>
-        <span class="icon">⏹️</span>
-        <span class="label">Stop</span>
-      </button>
-      <button id="reset-button" class="control-button">
-        <span class="icon">🔄</span>
-        <span class="label">Reset</span>
-      </button>
+        <div id="error-message" class="error-message">
+          Sorry, we couldn't find your email in our system.
+        </div>
+
+        <button type="submit" class="submit-button">Start Interview</button>
+      </form>
     </div>
   </main>
 
@@ -54,9 +132,63 @@
   </footer>
 </div>
 
-<!-- Add the query parameter script before other scripts -->
-<script src="/static/js/query-params.js"></script>
-<script src="/static/js/webrtc.js"></script>
-<script src="/static/js/app.js"></script>
+<!-- Load the users constants file -->
+<script src="/static/js/users.js"></script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const welcomeForm = document.getElementById('welcome-form');
+    const errorMessage = document.getElementById('error-message');
+
+    welcomeForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+
+      const emailInput = document.getElementById('user-email');
+      const email = emailInput.value.trim();
+
+      if (email) {
+        // Look up the user's name from their email
+        const userName = getUserByEmail(email);
+
+        if (userName) {
+          // Store both email and name in localStorage
+          localStorage.setItem('userEmail', email);
+          localStorage.setItem('userName', userName);
+
+          // Redirect to the interview page with the name as a query parameter
+          window.location.href = `interview.html?name=${encodeURIComponent(userName)}&email=${encodeURIComponent(email)}`;
+        } else {
+          // Show error message if email not found
+          errorMessage.classList.add('visible');
+
+          // Focus back on the email input
+          emailInput.focus();
+
+          // Shake the form slightly to indicate error
+          welcomeForm.style.animation = 'shake 0.5s ease-in-out';
+          setTimeout(() => {
+            welcomeForm.style.animation = '';
+          }, 500);
+        }
+      }
+    });
+
+    // Hide error message when user starts typing again
+    document.getElementById('user-email').addEventListener('input', () => {
+      errorMessage.classList.remove('visible');
+    });
+  });
+
+  // Add shake animation
+  const style = document.createElement('style');
+  style.textContent = `
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
+      20%, 40%, 60%, 80% { transform: translateX(5px); }
+    }
+  `;
+  document.head.appendChild(style);
+</script>
 </body>
 </html>
