--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,8 @@
 <body>
 <div class="container">
   <header>
-    <h1>Welcome to the Interview</h1>
+    <h1>Welcome to LexLLM</h1>
+    <h2>An interview in the style of the Lex Fridman podcast.</h2>
   </header>
 
   <main>
