--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Interview</title>
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/lexllm/css/style.css">
   <style>
     .welcome-container {
       max-width: 600px;
@@ -134,7 +134,7 @@
 </div>
 
 <!-- Load the users constants file -->
-<script src="/static/js/users.js"></script>
+<script src="/lexllm/js/users.js"></script>
 
 <script>
   console.log('STARTED index.html')
