--- a/static/interview.html
+++ b/static/interview.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interview</title>
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/lexllm/css/style.css">
 </head>
 <body>
 <div class="container">
@@ -59,9 +59,9 @@
 </div>
 
 <!-- Load the users constants file -->
-<script src="/static/js/users.js"></script>
-<script src="/static/js/webrtc.js"></script>
-<script src="/static/js/app.js"></script>
+<script src="/lexllm/js/users.js"></script>
+<script src="/lexllm/js/webrtc.js"></script>
+<script src="/lexllm/js/app.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     // Get user info from URL parameters
