--- a/lexllm/index.html
+++ b/lexllm/index.html
@@ -159,7 +159,7 @@
 
           // Redirect to the interview page with the name as a query parameter
           // window.location.href = `interview.html?name=${encodeURIComponent(userName)}&email=${encodeURIComponent(email)}`;
-          window.location.href = `interview.html`;
+          window.location.href = `lexllm/interview.html`;
         } else {
           // Show error message if email not found
           errorMessage.classList.add('visible');
