--- a/lexllm/interview.html
+++ b/lexllm/interview.html
@@ -147,7 +147,7 @@
       };
 
       // Make API request
-      const response = await fetch('/lexllm/api/introduction', {
+      const response = await fetch('/api/introduction', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
