updated location of resume files

--- a/lexllm/index.html
+++ b/lexllm/index.html
@@ -129,7 +129,7 @@
   </main>
 
   <footer>
-    <p>Powered by WebRTC, Whisper, and X.AI's Grok</p>
+    <p>Powered by WebRTC, Whisper, and Grok</p>
   </footer>
 </div>
 
