--- a/lexllm/interview.html
+++ b/lexllm/interview.html
@@ -54,7 +54,7 @@
   </main>
 
   <footer>
-    <p>Powered by WebRTC, Whisper, and X.AI's Grok</p>
+    <p>Powered by WebRTC, Whisper, and Grok</p>
     <p id="environment-indicator"></p>
   </footer>
 </div>
