separated preamble from resume for when we load system prompt

--- a/lexllm/index.html
+++ b/lexllm/index.html
@@ -133,6 +133,9 @@
   </footer>
 </div>
 
+<!-- Load the environment detection script first -->
+<script src="/lexllm/js/environment.js"></script>
+
 <!-- Load the users constants file -->
 <script src="/lexllm/js/users.js"></script>
 
